[metadata]
name = spine_aws_common
version = VERSION
author = NHS Digital
author_email = devops.core@nhs.net
description = NHS Digital Spine Core common AWS code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NHSDigital/spine-core-aws-common
project_urls =
    Bug Tracker = https://github.com/NHSDigital/spine-core-aws-common/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package =
     = spine_aws_common
packages = spine_aws_common, spine_aws_common.log, mesh_aws_client
python_requires = >=3.6
install_requires =
    six
    aws-lambda-powertools
include_package_data = True
